Fixed bug #76366 (references in sub-array for filtering breaks the filter)